// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/markdownEditor should match snapshot 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview octo-placeholder"
      data-testid="preview-element"
    />
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with initial text 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test "
  >
    <div
      class="octo-editor-preview"
      data-testid="preview-element"
    />
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  >
    <div
      class="TiptapEditor"
      data-testid="test-id"
    >
      <div>
        <div
          class="tiptap ProseMirror TiptapEditorInput"
          contenteditable="true"
          tabindex="0"
          translate="no"
        >
          <p>
            some initial text already set
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/markdownEditor should match snapshot with on click on preview element and then click out of it 1`] = `
<div>
  <div
    class="MarkdownEditor octo-editor classname-test active"
  >
    <div
      class="TiptapEditor"
      data-testid="test-id"
    >
      <div>
        <div
          class="tiptap ProseMirror TiptapEditorInput"
          contenteditable="true"
          tabindex="0"
          translate="no"
        >
          <p>
            some initial text already set
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
